# legal-snips-mcp

./: README.md  docker-compose.yml  init.sql  legal_snippets.json  legal_snippets_postgres_server.py  legal_snippets_server.py  pyproject.toml  setup_postgres.py  test_server.py
